cpp/relink/include/relink/standard_msgs.hpp

// std_msgs/Time -- wall-clock timestamp, POSIX (sec, nsec) pair.
struct Time {
    uint32_t sec;
    uint32_t nsec;

    static Time now() {
        struct timespec ts{};
        ::clock_gettime(CLOCK_REALTIME, &ts);
        return Time{static_cast<uint32_t>(ts.tv_sec), static_cast<uint32_t>(ts.tv_nsec)};
    }
};
// std_msgs/Duration -- signed (sec, nsec) pair, e.g. an elapsed time.
struct Duration {
    int32_t sec;
    int32_t nsec;
};
// std_msgs/Header -- seq counter, timestamp, and a coordinate-frame
// name. frame_id is fixed-size (see the file-level comment above);
// use set_frame_id()/frame_id_str() rather than touching the raw
// buffer, so truncation and null-termination are handled consistently.
struct Header {
    uint32_t seq;
    Time stamp;
    char frame_id[kFrameIdMaxLen]; // not guaranteed null-terminated if exactly kFrameIdMaxLen chars

    void set_frame_id(const char* name) {
        std::memset(frame_id, 0, sizeof(frame_id));
        std::strncpy(frame_id, name, sizeof(frame_id) - 1);
    }
    // Always returns a null-terminated view, even if the stored name
    // filled the buffer exactly (memcpy + explicit terminator, since
    // strncpy alone doesn't guarantee termination in that case).
    std::string frame_id_str() const {
        char buf[kFrameIdMaxLen + 1];
        std::memcpy(buf, frame_id, kFrameIdMaxLen);
        buf[kFrameIdMaxLen] = '\0';
        return std::string(buf);
    }
    void stamp_now() { stamp = Time::now(); }
};
// geometry_msgs/Vector3 -- see file-level comment: float32, not ROS's float64.
struct Vector3 {
    float x;
    float y;
    float z;
};
// geometry_msgs/Point -- identical layout to Vector3; kept as a
// separate type (not a using-alias) so a function signature makes the
// semantic distinction (a position vs. a direction/velocity) visible,
// matching ROS's own modeling choice.
struct Point {
    float x;
    float y;
    float z;
};
struct Quaternion {
    float x;
    float y;
    float z;
    float w;
};
struct Pose {
    Point position;
    Quaternion orientation;
};
struct Twist {
    Vector3 linear;
    Vector3 angular;
};
struct PoseStamped {
    std_msgs::Header header;
    Pose pose;
};
struct Transform {
    Vector3 translation;
    Quaternion rotation;
};
// nav_msgs/Odometry -- pose + twist, each with a 6x6 covariance matrix,
// plus a fixed-size child_frame_id (see file-level comment on strings).
struct Odometry {
    std_msgs::Header header;
    char child_frame_id[std_msgs::kFrameIdMaxLen];
    geometry_msgs::Pose pose;
    float pose_covariance[36];
    geometry_msgs::Twist twist;
    float twist_covariance[36];

    void set_child_frame_id(const char* name) {
        std::memset(child_frame_id, 0, sizeof(child_frame_id));
        std::strncpy(child_frame_id, name, sizeof(child_frame_id) - 1);
    }
    std::string child_frame_id_str() const {
        char buf[std_msgs::kFrameIdMaxLen + 1];
        std::memcpy(buf, child_frame_id, std_msgs::kFrameIdMaxLen);
        buf[std_msgs::kFrameIdMaxLen] = '\0';
        return std::string(buf);
    }
};
// nav_msgs/MapMetaData
struct MapMetaData {
    std_msgs::Time map_load_time;
    float resolution;
    uint32_t width;
    uint32_t height;
    geometry_msgs::Pose origin;
};
// nav_msgs/Path -- ROS's `geometry_msgs/PoseStamped[] poses` becomes a
// fixed-capacity array (see geometry_msgs::PoseArray's comment).
struct Path {
    std_msgs::Header header;
    uint32_t count; // valid entries in poses[0..count), <= kMaxPathPoses
    geometry_msgs::PoseStamped poses[kMaxPathPoses];
};
// nav_msgs/OccupancyGrid -- ROS's `int8[] data` (one entry per cell,
// typically far more than kMaxOccupancyGridCells for a real map) is
// capped the same way PointCloud2's data is; for a real-size map, tile
// it into multiple OccupancyGrid messages or use a dedicated
// chunked-transfer path the way Image does.
struct OccupancyGrid {
    std_msgs::Header header;
    MapMetaData info;
    uint32_t data_len; // valid cells in data[0..data_len), <= kMaxOccupancyGridCells
    int8_t data[kMaxOccupancyGridCells];
};
// nav_msgs/GridCells
struct GridCells {
    std_msgs::Header header;
    float cell_width;
    float cell_height;
    uint32_t count; // valid entries in cells[0..count), <= kMaxGridCells
    geometry_msgs::Point cells[kMaxGridCells];
};
// diagnostic_msgs/KeyValue -- both fields fixed kKvMaxLen-byte strings
// (see the file-level comment on strings).
struct KeyValue {
    char key[kKvMaxLen];
    char value[kKvMaxLen];

    void set_key(const char* s) { std::memset(key, 0, sizeof(key)); std::strncpy(key, s, sizeof(key) - 1); }
    void set_value(const char* s) { std::memset(value, 0, sizeof(value)); std::strncpy(value, s, sizeof(value) - 1); }
    std::string key_str() const {
        char buf[kKvMaxLen + 1]; std::memcpy(buf, key, kKvMaxLen); buf[kKvMaxLen] = '\0'; return std::string(buf);
    }
    std::string value_str() const {
        char buf[kKvMaxLen + 1]; std::memcpy(buf, value, kKvMaxLen); buf[kKvMaxLen] = '\0'; return std::string(buf);
    }
};
// diagnostic_msgs/DiagnosticStatus
struct DiagnosticStatus {
    static constexpr int8_t kOk = 0, kWarn = 1, kError = 2, kStale = 3;
    int8_t level;
    char name[std_msgs::kStringMaxLen];
    char message[std_msgs::kStringMaxLen];
    char hardware_id[std_msgs::kStringMaxLen];
    uint32_t values_count; // valid entries in values[0..values_count), <= kMaxKeyValues
    KeyValue values[kMaxKeyValues];

    void set_name(const char* s) { std::memset(name, 0, sizeof(name)); std::strncpy(name, s, sizeof(name) - 1); }
    void set_message(const char* s) { std::memset(message, 0, sizeof(message)); std::strncpy(message, s, sizeof(message) - 1); }
    void set_hardware_id(const char* s) { std::memset(hardware_id, 0, sizeof(hardware_id)); std::strncpy(hardware_id, s, sizeof(hardware_id) - 1); }
};
// diagnostic_msgs/DiagnosticArray
struct DiagnosticArray {
    std_msgs::Header header;
    uint32_t status_count; // valid entries in status[0..status_count), <= kMaxDiagnosticStatuses
    DiagnosticStatus status[kMaxDiagnosticStatuses];
};
// trajectory_msgs/JointTrajectoryPoint -- ROS's `float64[]` arrays
// become fixed kMaxDOF-capacity arrays (see geometry_msgs::PoseArray's
// comment); all four share one `count`, same rationale as
// sensor_msgs::JointState.
struct JointTrajectoryPoint {
    uint32_t count; // valid entries in every array below, <= kMaxDOF
    double positions[kMaxDOF];
    double velocities[kMaxDOF];
    double accelerations[kMaxDOF];
    double effort[kMaxDOF];
    std_msgs::Duration time_from_start;
};
// trajectory_msgs/JointTrajectory
struct JointTrajectory {
    std_msgs::Header header;
    uint32_t joint_names_count; // valid entries, <= kMaxDOF
    char joint_names[kMaxDOF][std_msgs::kStringMaxLen];
    uint32_t points_count; // valid entries in points[0..points_count), <= kMaxTrajectoryPoints
    JointTrajectoryPoint points[kMaxTrajectoryPoints];

    void set_joint_name(uint32_t i, const char* s) {
        std::memset(joint_names[i], 0, std_msgs::kStringMaxLen);
        std::strncpy(joint_names[i], s, std_msgs::kStringMaxLen - 1);
    }
};
// trajectory_msgs/MultiDOFJointTrajectoryPoint
struct MultiDOFJointTrajectoryPoint {
    uint32_t count; // valid entries in every array below, <= kMaxDOF
    geometry_msgs::Transform transforms[kMaxDOF];
    geometry_msgs::Twist velocities[kMaxDOF];
    geometry_msgs::Twist accelerations[kMaxDOF];
    std_msgs::Duration time_from_start;
};
// trajectory_msgs/MultiDOFJointTrajectory
struct MultiDOFJointTrajectory {
    std_msgs::Header header;
    uint32_t joint_names_count;
    char joint_names[kMaxDOF][std_msgs::kStringMaxLen];
    uint32_t points_count; // <= kMaxMultiDOFTrajectoryPoints
    MultiDOFJointTrajectoryPoint points[kMaxMultiDOFTrajectoryPoints];

    void set_joint_name(uint32_t i, const char* s) {
        std::memset(joint_names[i], 0, std_msgs::kStringMaxLen);
        std::strncpy(joint_names[i], s, std_msgs::kStringMaxLen - 1);
    }
};
// actionlib_msgs/GoalID -- ROS's `string id` becomes a fixed
// kStringMaxLen-byte buffer (see the file-level comment on strings).
struct GoalID {
    std_msgs::Time stamp;
    char id[std_msgs::kStringMaxLen];

    void set_id(const char* s) { std::memset(id, 0, sizeof(id)); std::strncpy(id, s, sizeof(id) - 1); }
    std::string id_str() const {
        char buf[std_msgs::kStringMaxLen + 1]; std::memcpy(buf, id, std_msgs::kStringMaxLen);
        buf[std_msgs::kStringMaxLen] = '\0'; return std::string(buf);
    }
};
// actionlib_msgs/GoalStatus
struct GoalStatus {
    static constexpr uint8_t kPending = 0, kActive = 1, kPreempted = 2, kSucceeded = 3, kAborted = 4,
                              kRejected = 5, kPreempting = 6, kRecalling = 7, kRecalled = 8, kLost = 9;
    GoalID goal_id;
    uint8_t status;
    char text[std_msgs::kStringMaxLen];

    void set_text(const char* s) { std::memset(text, 0, sizeof(text)); std::strncpy(text, s, sizeof(text) - 1); }
    std::string text_str() const {
        char buf[std_msgs::kStringMaxLen + 1]; std::memcpy(buf, text, std_msgs::kStringMaxLen);
        buf[std_msgs::kStringMaxLen] = '\0'; return std::string(buf);
    }
};
// actionlib_msgs/GoalStatusArray -- ROS's `GoalStatus[] status_list`
// becomes a fixed kMaxGoalStatuses-capacity array (see
// geometry_msgs::PoseArray's comment on the general pattern).
struct GoalStatusArray {
    std_msgs::Header header;
    uint32_t status_list_count; // valid entries, <= kMaxGoalStatuses
    GoalStatus status_list[kMaxGoalStatuses];
};