python/relink_py/relink/standard_msgs.py


    def set_child_frame_id(self, name: str):
        self._child_frame_id = name.encode("utf-8")[:FRAME_ID_MAX_LEN - 1]

    def child_frame_id_str(self) -> str:
        return self._child_frame_id.rstrip(b"\x00").decode("utf-8", errors="replace")


class MapMetaData(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("map_load_time", Time), ("resolution", ctypes.c_float),
        ("width", ctypes.c_uint32), ("height", ctypes.c_uint32), ("origin", Pose),
    ]


class Path(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [("header", Header), ("count", ctypes.c_uint32), ("poses", PoseStamped * MAX_PATH_POSES)]


class OccupancyGrid(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("header", Header), ("info", MapMetaData),
        ("data_len", ctypes.c_uint32), ("data", ctypes.c_int8 * MAX_OCCUPANCY_GRID_CELLS),
    ]


class GridCells(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("header", Header), ("cell_width", ctypes.c_float), ("cell_height", ctypes.c_float),
        ("count", ctypes.c_uint32), ("cells", Point * MAX_GRID_CELLS),
    ]


for _t in (Odometry, MapMetaData, Path, OccupancyGrid, GridCells):
    _check_fits(_t)


# --- diagnostic_msgs --------------------------------------------------------

KV_MAX_LEN = 32
MAX_KEY_VALUES = 3
MAX_DIAGNOSTIC_STATUSES = 3


class KeyValue(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [("_key", ctypes.c_char * KV_MAX_LEN), ("_value", ctypes.c_char * KV_MAX_LEN)]

    def set_key(self, s: str):
        self._key = s.encode("utf-8")[:KV_MAX_LEN - 1]

    def set_value(self, s: str):
        self._value = s.encode("utf-8")[:KV_MAX_LEN - 1]

    def key_str(self) -> str:
        return self._key.rstrip(b"\x00").decode("utf-8", errors="replace")

    def value_str(self) -> str:
        return self._value.rstrip(b"\x00").decode("utf-8", errors="replace")


class DiagnosticStatus(ctypes.LittleEndianStructure):
    _pack_ = 1
    OK, WARN, ERROR, STALE = 0, 1, 2, 3
    _fields_ = [
        ("level", ctypes.c_int8),
        ("_name", ctypes.c_char * STRING_MAX_LEN),
        ("_message", ctypes.c_char * STRING_MAX_LEN),
        ("_hardware_id", ctypes.c_char * STRING_MAX_LEN),
        ("values_count", ctypes.c_uint32),
        ("values", KeyValue * MAX_KEY_VALUES),
    ]

    def set_name(self, s: str):
        self._name = s.encode("utf-8")[:STRING_MAX_LEN - 1]

    def set_message(self, s: str):
        self._message = s.encode("utf-8")[:STRING_MAX_LEN - 1]

    def set_hardware_id(self, s: str):
        self._hardware_id = s.encode("utf-8")[:STRING_MAX_LEN - 1]

    def name_str(self) -> str:
        return self._name.rstrip(b"\x00").decode("utf-8", errors="replace")

    def message_str(self) -> str:
        return self._message.rstrip(b"\x00").decode("utf-8", errors="replace")

    def hardware_id_str(self) -> str:
        return self._hardware_id.rstrip(b"\x00").decode("utf-8", errors="replace")


class DiagnosticArray(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("header", Header),
        ("status_count", ctypes.c_uint32),
        ("status", DiagnosticStatus * MAX_DIAGNOSTIC_STATUSES),
    ]


for _t in (KeyValue, DiagnosticStatus, DiagnosticArray):
    _check_fits(_t)


# --- trajectory_msgs --------------------------------------------------------

MAX_DOF = 4
MAX_TRAJECTORY_POINTS = 6
MAX_MULTI_DOF_TRAJECTORY_POINTS = 3


class JointTrajectoryPoint(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("count", ctypes.c_uint32),
        ("positions", ctypes.c_double * MAX_DOF),
        ("velocities", ctypes.c_double * MAX_DOF),
        ("accelerations", ctypes.c_double * MAX_DOF),
        ("effort", ctypes.c_double * MAX_DOF),
        ("time_from_start", Duration),
    ]


class JointTrajectory(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("header", Header),
        ("joint_names_count", ctypes.c_uint32),
        ("_joint_names", (ctypes.c_char * STRING_MAX_LEN) * MAX_DOF),
        ("points_count", ctypes.c_uint32),
        ("points", JointTrajectoryPoint * MAX_TRAJECTORY_POINTS),
    ]

    def set_joint_name(self, i: int, s: str):
        encoded = s.encode("utf-8")[:STRING_MAX_LEN - 1]
        self._joint_names[i][:] = encoded.ljust(STRING_MAX_LEN, b"\x00")


class MultiDOFJointTrajectoryPoint(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("count", ctypes.c_uint32),
        ("transforms", Transform * MAX_DOF),
        ("velocities", Twist * MAX_DOF),
        ("accelerations", Twist * MAX_DOF),
        ("time_from_start", Duration),
    ]


class MultiDOFJointTrajectory(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("header", Header),
        ("joint_names_count", ctypes.c_uint32),
        ("_joint_names", (ctypes.c_char * STRING_MAX_LEN) * MAX_DOF),
        ("points_count", ctypes.c_uint32),
        ("points", MultiDOFJointTrajectoryPoint * MAX_MULTI_DOF_TRAJECTORY_POINTS),
    ]

    def set_joint_name(self, i: int, s: str):
        encoded = s.encode("utf-8")[:STRING_MAX_LEN - 1]
        self._joint_names[i][:] = encoded.ljust(STRING_MAX_LEN, b"\x00")


for _t in (JointTrajectoryPoint, JointTrajectory, MultiDOFJointTrajectoryPoint, MultiDOFJointTrajectory):
    _check_fits(_t)


# --- actionlib_msgs -----------------------------------------------------------

MAX_GOAL_STATUSES = 8


class GoalID(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [("stamp", Time), ("_id", ctypes.c_char * STRING_MAX_LEN)]

    def set_id(self, s: str):
        self._id = s.encode("utf-8")[:STRING_MAX_LEN - 1]

    def id_str(self) -> str:
        return self._id.rstrip(b"\x00").decode("utf-8", errors="replace")


class GoalStatus(ctypes.LittleEndianStructure):
    _pack_ = 1
    (PENDING, ACTIVE, PREEMPTED, SUCCEEDED, ABORTED,
     REJECTED, PREEMPTING, RECALLING, RECALLED, LOST) = range(10)
    _fields_ = [("goal_id", GoalID), ("status", ctypes.c_uint8), ("_text", ctypes.c_char * STRING_MAX_LEN)]

    def set_text(self, s: str):
        self._text = s.encode("utf-8")[:STRING_MAX_LEN - 1]

    def text_str(self) -> str:
        return self._text.rstrip(b"\x00").decode("utf-8", errors="replace")


class GoalStatusArray(ctypes.LittleEndianStructure):
    _pack_ = 1
    _fields_ = [
        ("header", Header),
        ("status_list_count", ctypes.c_uint32),
        ("status_list", GoalStatus * MAX_GOAL_STATUSES),
    ]


for _t in (GoalID, GoalStatus, GoalStatusArray):
    _check_fits(_t)
